# Yarock

./: .bzrignore  CHANGES  CHANGES.md  CMakeLists.txt  README  README.md  yarock.qrc
cmake/: .directory  FindHtmlCxx.cmake  FindLIBMPV.cmake  FindLIBVLC.cmake  FindLibMPV.cmake  FindLibVLC.cmake  FindPhonon.cmake  FindPhonon4Qt5.cmake  FindPhonon4Qt6.cmake  FindTaglib-Extras.cmake  FindTaglib.cmake
data/: org.yarock.appdata.xml  org.yarock.metainfo.xml  yarock.appdata.xml  yarock.desktop  yarock.metainfo.xml
data/lyrics/: ultimate_providers.xml
images/: .directory
src/: CMakeLists.txt  commandlineoptions.cpp  commandlineoptions.h  config.h.in  constants.h  debug.cpp  debug.h  global_actions.cpp  global_actions.h  global_shortcuts.cpp  global_shortcuts.h  iconmanager.cpp  iconmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  networkaccess.cpp  networkaccess.h  settings.cpp  settings.h  shortcuts_manager.cpp  shortcuts_manager.h  starter.cpp  starter.h  systray.cpp  systray.h  threadmanager.cpp  threadmanager.h  utilities.cpp  utilities.h  views.h
src/core/database/: database.cpp  database.h  database_cmd.cpp  database_cmd.h  databasebuilder.cpp  databasebuilder.h
src/core/history/: histomanager.cpp  histomanager.h
src/core/mediaitem/: mediaitem.cpp  mediaitem.h  mediamimedata.cpp  mediamimedata.h  playlist_parser.cpp  playlist_parser.h  shareddata.h  shareddata_qt5.h  tag.cpp  tag.h
src/core/mediasearch/: media_search.cpp  media_search.h  media_search_engine.cpp  media_search_engine.h  search_query.cpp  search_query.h  search_query_widget.cpp  search_query_widget.h
src/core/player/: engine.cpp  engine.h  engine_base.cpp  engine_base.h  engine_phonon.cpp  engine_phonon.h  engine_vlc.cpp  engine_vlc.h
src/core/player/mpv/: CMakeLists.txt  engine_mpv.cpp  engine_mpv.h
src/core/player/phonon/: CMakeLists.txt  engine_phonon.cpp  engine_phonon.h
src/core/player/qtmultimedia/: CMakeLists.txt  engine_qtmultimedia.cpp  engine_qtmultimedia.h
src/core/player/vlc/: CMakeLists.txt  config.h  engine_vlc.cpp  engine_vlc.h  vlc_lib.cpp  vlc_lib.h  vlc_media.cpp  vlc_media.h
src/covers/: .directory  covercache.cpp  covercache.h
src/dbus/: dbusnotification.cpp  dbusnotification.h  mpris2.cpp  mpris2.h  mpris_manager.cpp  mpris_manager.h  org.mpris.MediaPlayer2.Player.xml  org.mpris.MediaPlayer2.xml
src/infosystem/: info_service.cpp  info_service.h  info_system.cpp  info_system.h  info_system_worker.cpp  info_system_worker.h
src/infosystem/services/: service_discogs.cpp  service_discogs.h  service_echonest.cpp  service_echonest.h  service_lastfm.cpp  service_lastfm.h  service_lyrics.cpp  service_lyrics.h  service_musicbrainz.cpp  service_musicbrainz.h  service_spotify.cpp  service_spotify.h  ultimatelyricsprovider.cpp  ultimatelyricsprovider.h  ultimatelyricsreader.cpp  ultimatelyricsreader.h
src/infosystem/tasks/: tagsearch.cpp  tagsearch.h
src/models/filesystem/: file_model.cpp  file_model.h
src/models/local/: histo_model.cpp  histo_model.h  local_playlist_model.cpp  local_playlist_model.h  local_playlist_populator.cpp  local_playlist_populator.h  local_track_model.cpp  local_track_model.h  local_track_populator.cpp  local_track_populator.h
src/models/stream/: service_base.cpp  service_base.h  service_dirble.cpp  service_dirble.h  service_favorite.cpp  service_favorite.h  service_radionomy.cpp  service_radionomy.h  service_shoutcast.cpp  service_shoutcast.h  service_tunein.cpp  service_tunein.h  service_xspf.cpp  service_xspf.h  stream_model.cpp  stream_model.h
src/online/: lastfm.cpp  lastfm.h
src/playqueue/: playlistdbwriter.cpp  playlistdbwriter.h  playlistpopulator.cpp  playlistpopulator.h  playlistview.cpp  playlistview.h  playlistwidget.cpp  playlistwidget.h  playlistwidgetbase.h  playlistwriter.cpp  playlistwriter.h  playqueue_base.cpp  playqueue_base.h  playqueue_model.cpp  playqueue_model.h  playqueue_proxymodel.cpp  playqueue_proxymodel.h  task_manager.cpp  task_manager.h  virtual_playqueue.cpp  virtual_playqueue.h
src/shortcuts/: CMakeLists.txt  globalshortcut.cpp  globalshortcut.h  globalshortcut_p.h  globalshortcut_x11.cpp
src/smartplaylist/: smartplaylist.cpp  smartplaylist.h
src/views/: browser_view.cpp  browser_view.h  item_button.cpp  item_button.h  item_common.cpp  item_common.h  item_menu.cpp  item_menu.h  scene_base.cpp  scene_base.h  views.h
src/views/about/: about_scene.cpp  about_scene.h
src/views/context/: context_item.cpp  context_item.h  context_scene.cpp  context_scene.h  context_widget.cpp  context_widget.h  lyricseditor.cpp  lyricseditor.h
src/views/filesystem/: file_graphicitem.cpp  file_graphicitem.h  file_scene.cpp  file_scene.h
src/widgets/: audiocontrols.cpp  audiocontrols.h  customsplitter.cpp  customsplitter.h  exlineedit.cpp  exlineedit.h  flowlayout.cpp  flowlayout.h  header_widget.cpp  header_widget.h  iconloader.cpp  iconloader.h  minimalwidget.cpp  minimalwidget.h  playertoolbar.cpp  playertoolbar.h  ratingwidget.cpp  ratingwidget.h  searchline_edit.cpp  searchline_edit.h  seekslider.cpp  seekslider.h  seeksliderpopup.cpp  seeksliderpopup.h  sort_widget.cpp  sort_widget.h  spacer.cpp  spacer.h  statusmanager.cpp  statusmanager.h  statuswidget.cpp  statuswidget.h  tagwidget.cpp  tagwidget.h
src3party/qtsingleapplication/: CMakeLists.txt  qtlocalpeer.cpp  qtlocalpeer.h  qtlockedfile.h  qtlockedfile_win.cpp  qtsingleapplication.cpp  qtsingleapplication.h  qtsingleapplication.patch  qtsinglecoreapplication.cpp  qtsinglecoreapplication.h
src3party/qtsingleapplication_qt5/: CMakeLists.txt  qtlockedfile.cpp  qtsinglecoreapplication.cpp
src3party/qxt/: CMakeLists.txt  LICENSE  qxtglobal.h  qxtglobalshortcut_x11.cpp
src3party/qxt_qt4/: CMakeLists.txt  qxtglobal.h
translation/: yarock_TR.ts  yarock_cs.ts  yarock_de.ts  yarock_en.ts  yarock_es.ts  yarock_fr.ts  yarock_gl.ts  yarock_hr_HR.ts  yarock_id.ts  yarock_it.ts  yarock_ja.ts  yarock_lt.ts  yarock_pl.ts  yarock_pt.ts  yarock_pt_BR.ts  yarock_ro.ts  yarock_ru.ts  yarock_ru@petr1708.ts  yarock_sr.ts  yarock_sv.ts  yarock_tr_TR.ts  yarock_zh_CN.ts
(+102 files in other folders)
